--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         }
     </style>
 </head>
+    <div id="quote">
+    <h2>Inspirational Quote</h2>
+    <p id="quoteText">Fetching quote...</p>
+    </div>
 <body>
     <header>
         <h1><span class="titleBar"></span>Health and Fitness Tracker App</h1>
