--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </style>
 </head>
     <div id="quote">
+        <div class="shadowbox">
     <h2>Inspirational Quote</h2>
     <p id="quoteText">Fetching quote...</p>
     </div>
